# mijit

./: .gitignore  Cargo.toml  README.md  compile  main  main.c  run_clippy.sh
doc/: arm-gdb.txt  arm.md  gdb-hints.txt  our-conventions.md  related.txt  specialisation.txt  x86-conventions.md  x86-gdb.txt  x86.md
doc/engine/: structure.md
doc/theory/: specialisation.md  specialisation.txt
src/: buffer.rs  c_bindings.rs  code.rs  control_flow.rs  history.rs  jit.rs  lib.rs  util.rs  v0.3-plan.txt  x86_64.rs
src/beetle/: builder.rs  decision_tree.rs  mod.rs  registers.rs  tests.rs
src/buffer/: mmap.rs  mod.rs  vec.rs
src/code/: action.rs  builder.rs  clock.rs  control_flow.rs  convention.rs  ebb.rs  enums.rs  mod.rs  switch.rs  variable.rs
src/graph/: builder.rs  cft.rs  convention.rs  cost.rs  dataflow.rs  mod.rs  op.rs
src/jit/: assembler.rs  engine.rs  entry.rs  factorial.rs  lowerer.rs  machine.rs  mod.rs
src/optimizer/: allocation.rs  allocator.rs  cft.rs  codegen.rs  cost.rs  dataflow.rs  dep.rs  ebb.rs  fill.rs  flood.rs  keep_alive.rs  mod.rs  moves.rs  op.rs  placer.rs  pool.rs  pressure.rs  regression_0.txt  regression_8.txt  resources.rs  schedule.rs  simulation.rs  switch.rs  usage.rs  walker.rs
src/optimizer/allocator/: mod.rs  placer.rs  pool.rs  schedule.rs
src/optimizer/builder/: codegen.rs  fill.rs  flood.rs  keep_alive.rs  mod.rs
src/optimizer/builder/allocator/: mod.rs  placer.rs  pool.rs  usage.rs
src/optimizer/old/: allocation.rs  mod.rs  schedule.rs
src/util/: and_or.rs  array_map.rs  comma_separated.rs  fifo.rs  iter.rs  mod.rs  permutation.rs  rceq.rs  reverse_map.rs  rotate.rs  usage.rs
