[package]
name = "mijit"
version = "0.1.1"
authors = ["apt1002"]
edition = "2018"
description = "Experimental JIT compiler generator"
readme = "README.md"
homepage = "https://github.com/apt1002/mijit/"
repository = "https://github.com/apt1002/mijit/"
license = "BSD-2-Clause-Patent"
rust-version = "1.53"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mijit"
crate_type = ["rlib", "cdylib"]

[dependencies]
memmap = "0.6.2"
memoffset = "0.6"
indexmap = "1.4.0"

[dev-dependencies]
rand = "0.7"
bad64 = "0.3.0"

[dev-dependencies.iced-x86]
version = "1.2.0"
default-features = false
# See below for all features
features = ["std", "decoder", "nasm"]

[patch.crates-io]
# Pull request not yet released: https://github.com/yrp604/bad64/pull/4
bad64 = {git='https://github.com/yrp604/bad64', rev='8a8ebcc'}
