[package]
name = "mijit"
version = "0.2.2"
authors = ["apt1002"]
edition = "2021"
description = "Experimental JIT compiler generator"
readme = "README.md"
homepage = "https://github.com/apt1002/mijit/"
repository = "https://github.com/apt1002/mijit/"
license = "BSD-2-Clause-Patent"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mijit"
crate_type = ["rlib"]

[dependencies]
memmap = "0.7.0"
memoffset = "0.6.4"
indexmap = "1.7.0"

[dev-dependencies]
bad64 = "0.4.0"
rand = "0.8.5"
rand_pcg = "0.3.1"

[dev-dependencies.iced-x86]
version = "1.14.0"
default-features = false
# See below for all features
features = ["std", "decoder", "nasm"]
